# spk

./: README.md  design.md  generate_parser.py  grammar.txt  justfile  pyproject.toml  todo.md
spk/: errors.py  parser.py  program.py
tests/: test_parser.py  test_program.py
