[project]
name = "spk"
version = "0.0.0"
description = "Stream Processing Kit"
requires-python = ">=3.12"
dependencies = [
    "outsourcer",
    "sourcer",
]

[tool.uv.sources]
sourcer = { path = "../sourcer", editable = true }
outsourcer = { path = "../outsourcer", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
    "spk/parser.py",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)
